--- a/configs/linting/.eslintrc.json
+++ b/configs/linting/.eslintrc.json
@@ -22,7 +22,8 @@
 		"comma-dangle": ["error", "never"],
 		"object-curly-spacing": ["error", "always"],
 		"array-bracket-spacing": ["error", "never"],
-		"arrow-parens": ["error", "as-needed"]
+		"arrow-parens": ["error", "as-needed"],
+		"react/react-in-jsx-scope": 0
 	},
-	"extends": ["eslint:recommended"]
+	"extends": ["eslint:recommended", "plugin:react/recommended"]
 }
