--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"lint": "npm run eslint:check && npm run prettier:check",
 		"lint:fix": "npm run eslint:check && npm run prettier:fix",
 		"prepare": "husky install",
-		"start": "node src/index.js",
-		"dev": "nodemon src/index.js"
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
 	},
 	"config": {
 		"commitizen": {
@@ -37,14 +38,14 @@
 	"devDependencies": {
 		"@babel/core": "^7.18.2",
 		"@babel/eslint-parser": "^7.18.2",
-		"@babel/plugin-syntax-import-assertions": "^7.17.12",
+		"@babel/plugin-syntax-jsx": "^7.18.6",
 		"@commitlint/cli": "^11.0.0",
 		"commitizen": "^4.2.4",
 		"cz-customizable": "^6.3.0",
 		"eslint": "^8.17.0",
+		"eslint-plugin-react": "^7.30.1",
 		"husky": "^8.0.0",
 		"lint-staged": "^13.0.0",
-		"nodemon": "^2.0.19",
 		"prettier": "^2.6.2"
 	},
 	"type": "module",
@@ -57,5 +58,11 @@
 	"bugs": {
 		"url": "https://github.com/Bekert/project-base/issues"
 	},
-	"homepage": "https://github.com/Bekert/project-base"
+	"homepage": "https://github.com/Bekert/project-base",
+	"dependencies": {
+		"next": "^12.2.0",
+		"prop-types": "^15.8.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	}
 }
