--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
 	},
 	"homepage": "https://github.com/Bekert/project-base",
 	"dependencies": {
+		"bootstrap": "^5.1.3",
 		"next": "^12.2.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
+		"react-bootstrap": "^2.4.0",
 		"react-dom": "^18.2.0"
 	}
 }
