--- a/package.json
+++ b/package.json
@@ -36,17 +36,17 @@
 		"extends": "./configs/linting/.babelrc.json"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.18.2",
-		"@babel/eslint-parser": "^7.18.2",
-		"@babel/plugin-syntax-jsx": "^7.18.6",
-		"@commitlint/cli": "^11.0.0",
-		"commitizen": "^4.2.4",
-		"cz-customizable": "^6.3.0",
-		"eslint": "^8.17.0",
-		"eslint-plugin-react": "^7.30.1",
-		"husky": "^8.0.0",
-		"lint-staged": "^13.0.0",
-		"prettier": "^2.6.2"
+		"@babel/core": "^7.23.2",
+		"@babel/eslint-parser": "^7.22.15",
+		"@babel/plugin-syntax-jsx": "^7.22.5",
+		"@commitlint/cli": "^17.7.2",
+		"commitizen": "^4.3.0",
+		"cz-customizable": "^6.9.2",
+		"eslint": "^8.51.0",
+		"eslint-plugin-react": "^7.33.2",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.3.0",
+		"prettier": "^2.8.8"
 	},
 	"type": "module",
 	"repository": {
@@ -60,11 +60,12 @@
 	},
 	"homepage": "https://github.com/Bekert/project-base",
 	"dependencies": {
-		"bootstrap": "^5.1.3",
-		"next": "^12.2.0",
+		"bootstrap": "^5.3.2",
+		"eslint-config-next": "^13.5.4",
+		"next": "^13.5.4",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
-		"react-bootstrap": "^2.4.0",
+		"react-bootstrap": "^2.9.0",
 		"react-dom": "^18.2.0"
 	}
 }
