--- a/configs/linting/.eslintrc.json
+++ b/configs/linting/.eslintrc.json
@@ -1,17 +1,4 @@
 {
-	"parser": "@babel/eslint-parser",
-	"parserOptions": {
-		"ecmaVersion": 2023,
-		"sourceType": "module",
-		"ecmaFeatures": {
-			"jsx": true
-		}
-	},
-	"env": {
-		"es6": true,
-		"node": true,
-		"browser": true
-	},
 	"rules": {
 		"no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
 		"semi": ["error", "never"],
@@ -25,5 +12,5 @@
 		"arrow-parens": ["error", "as-needed"],
 		"react/react-in-jsx-scope": 0
 	},
-	"extends": ["eslint:recommended", "plugin:react/recommended"]
+	"extends": ["eslint:recommended", "next"]
 }
